<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_theme_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capital_title_all"
                android:paddingLeft="32dp"
                android:textColor="@color/color_text_white"
                android:textSize="@dimen/text_size_14" />

            <TextView
                android:id="@+id/tv_capital_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="0.00"
                android:paddingLeft="32dp"
                android:textColor="@color/yellow"
                android:textSize="@dimen/text_size_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/capital_exchange_count"
                        android:textColor="@color/color_text_white"
                        android:textSize="@dimen/text_size_14" />

                    <TextView
                        android:id="@+id/tv_exchange_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="0.00"
                        android:textColor="@color/yellow"
                        android:textSize="@dimen/text_size_14" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:background="@mipmap/icon_warning" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/capital_exchange_fast"
                        android:textColor="@color/yellow"
                        android:layout_gravity="center"
                        android:textSize="@dimen/text_size_14" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/capital_income_count"
                        android:textColor="@color/color_text_white"
                        android:textSize="@dimen/text_size_14" />

                    <TextView
                        android:id="@+id/tv_income_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="0.00"
                        android:textColor="@color/yellow"
                        android:textSize="@dimen/text_size_14" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@color/color_slide_bg"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/et_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/capital_search"
                android:layout_alignParentRight="true"
                android:padding="24dp"
                android:textColor="@color/color_text_white"
                android:textSize="@dimen/text_size_14" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_currency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_currency"
                android:scrollbars="vertical">

            </android.support.v7.widget.RecyclerView>

        </RelativeLayout>


    </LinearLayout>
</layout>