<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="68dp"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_currency_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:textColor="@color/color_text_white"
        android:textSize="@dimen/text_size_14" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="12dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|left"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capital_available"
                android:textColor="@color/color_text_white"
                android:textSize="@dimen/text_size_8" />

            <TextView
                android:id="@+id/tv_exchange_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="900000.00"
                android:textColor="@color/yellow"
                android:textSize="@dimen/text_size_8" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|left"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capital_frozen"
                android:textColor="@color/color_text_white"
                android:textSize="@dimen/text_size_8" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="000000.000"
                android:layout_marginTop="6dp"
                android:textColor="@color/yellow"
                android:textSize="@dimen/text_size_8" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|left"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capital_total"
                android:textColor="@color/color_text_white"
                android:textSize="@dimen/text_size_8" />

            <TextView
                android:id="@+id/tv_income_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="900000.00"
                android:textColor="@color/yellow"
                android:textSize="@dimen/text_size_8" />
        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        android:background="#d2d2d2" />

</LinearLayout>