<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_theme_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_slide_bg"
            android:orientation="vertical">

            <com.alsc.utils.view.TitleBar
                android:id="@+id/title_bar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/px180"
                app:showLeftDrawable="true"
                app:showTextLeft="true"
                app:tbTitleLeft="@string/menu_item_about" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:background="@mipmap/icon_warning" />

            <TextView
                android:id="@+id/tv_capital_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:text="18624.2635"
                android:textColor="@color/yellow"
                android:textSize="@dimen/text_size_14" />

            <TextView
                android:id="@+id/tv_capital_to_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:text="@string/capital_exchange_fast"
                android:textColor="@color/yellow"
                android:textSize="@dimen/text_size_14" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="dfdfdsfdsfdasfdsfadsfsdf"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_size_14" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:background="@mipmap/icon_warning" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ll_transfer"
                    android:layout_width="126dp"
                    android:background="@color/yellow_deep"
                    android:orientation="horizontal"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:layout_height="46dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/capital_transfer"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_14" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:background="@mipmap/icon_warning" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_receivables"
                    android:layout_width="126dp"
                    android:background="@color/yellow_deep"
                    android:orientation="horizontal"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:layout_height="46dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/capital_receiveables"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_14" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:background="@mipmap/icon_warning" />
                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.flyco.tablayout.CommonTabLayout
                android:id="@+id/ct_capital_title"
                android:layout_width="0dp"
                android:layout_height="@dimen/DIMEN_54PX"
                android:layout_marginBottom="@dimen/DIMEN_10PX"
                android:layout_weight="4"
                android:background="@color/color_theme_bg"
                app:tl_divider_padding="13dp"
                app:tl_indicator_color="@color/pop_title_bg"
                app:tl_indicator_height="@dimen/DIMEN_2PX"
                app:tl_indicator_width_equal_title="true"
                app:tl_tab_padding="2dp"
                app:tl_tab_space_equal="true"
                app:tl_textSelectColor="@color/pop_title_bg"
                app:tl_textUnselectColor="@color/white"
                app:tl_textsize="@dimen/text_size_14" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:background="@mipmap/icon_warning" />
            </LinearLayout>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_currency_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">

        </android.support.v7.widget.RecyclerView>


    </LinearLayout>
</layout>